# latte

./: .coveragerc  .gitignore  .pyre_configuration  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  citations.cff  codecov.yml  requirements.txt  run_tests.sh  setup.cfg  twistd.pid
.circleci/: config.yml  config_old.yml
.github/: FUNDING.yml
17-examples/examples/: mnist-lightning.ipynb
docs/: Makefile  conf.py  index.html  index.rst  make.bat  readme_head.md  requirements.txt  twistd.pid
docs/_autosummary/: latte.metrics.keras.rst  latte.metrics.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  readme_head.doctree
docs/_build/doctrees/_autosummary/: latte.doctree  latte.functional.disentanglement.doctree  latte.functional.disentanglement.mutual_info.doctree  latte.functional.doctree  latte.metrics.common.doctree  latte.metrics.doctree  latte.metrics.keras.doctree  latte.metrics.keras.wrapper.doctree  latte.metrics.torch.doctree  latte.metrics.torch.wrapper.doctree
docs/_build/doctrees/src/: modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme_head.html  search.html  searchindex.js
docs/_build/html/_autosummary/: latte.functional.disentanglement.html  latte.functional.disentanglement.mutual_info.html  latte.functional.html  latte.html  latte.metrics.common.html  latte.metrics.html  latte.metrics.keras.html  latte.metrics.keras.wrapper.html  latte.metrics.torch.html  latte.metrics.torch.wrapper.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/src/: modules.html
docs/docsbuild/doctrees/: environment.pickle  index.doctree
docs/docsbuild/doctrees/_autosummary/: latte.doctree  latte.functional.disentanglement.doctree  latte.functional.doctree  latte.metrics.common.doctree  (+5 more)
docs/docsbuild/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
examples/: mnist-keras.ipynb  mnist-lightning.ipynb  mnist-torch.ipynb
examples/morphomnist/: morphomnist-keras.ipynb  morphomnist-lightning.ipynb  morphomnist-torch.ipynb
src/latte/: __init__.py
src/latte/info/: mig.py
src/latte/metrics/: __init__.py  base.py  common.py  keras.py  torch.py
tests/: test_dummy.py  test_mi.py
tests/functional/: test_mi.py
tests/functional/bundles/: conftest.py  test_daware_mi.py  test_dependency_aware_mutual_info.py  test_liad_interp.py  test_liad_interpolatability.py
tests/functional/disentanglement/: conftest.py  test_mi.py  test_modularity.py  test_sap.py  test_utils.py
tests/functional/interpolatability/: test_motonicity.py  test_smoothness.py  test_utils.py
tests/metrics/: test_base.py  test_keras.py  test_metric.py  test_torch.py
tests/metrics/keras/: conftest.py  test_bundles.py  test_disentanglement.py  test_interpolatability.py  test_keras.py  test_wrapper.py
tests/metrics/torch/: test_bundles.py  test_disentanglement.py  test_interpolatability.py  test_torch.py  test_wrapper.py
(+143 files in other folders)
