[metadata]
name = latte-core
version = 0.0.1
author = Karn Watcharasupat
author_email = karn001@e.ntu.edu.sg
description = Core package for Latte
long_description = file: README.md
long_description_content_type = text/markdown
url = tba
project_urls =
    Bug Tracker = https://github.com/karnwatcharasupat/latte/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    numpy
    sklearn
python_requires = >=3.6

[options.packages.find]
where = src