[metadata]
name = latte-metrics
version = 0.0.1-alpha3
description = Latte: Cross-framework Python Package for Evaluation of Latent-based Generative Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karnwatcharasupat/latte
author = Karn Watcharasupat
author_email = karn001@e.ntu.edu.sg
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/karnwatcharasupat/latte/issues

[options]
packages = find:
install_requires =
    numpy>=1.18
    scikit-learn>=1.0
python_requires = >=3.7, <3.10
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-xdist
pytorch =
    torch>=1.3.1
    torchmetrics>=0.2
keras =
    tensorflow>=2.0 
all = 
    torch>=1.3.1
    torchmetrics>=0.2
    tensorflow>=2.0 
